
:2.1.4: NOT RELEASED YET

Compatibility Breaks
********************

New Features
************

Bug Fixes
*********

* Skip tests that needs a bzr source tree when there isn't one. This is
  needed to succesfully run the test suite for installed versions.
  (Vincent Ladeuil, #644855).

* Skip the tests that requires respecting the chmod bits when running as root.
  (Vincent Ladeuil, #646133)

Improvements
************

Documentation
*************

API Changes
***********

Internals
*********

Testing
*******


bzr 2.1.3
#########

:Codename: Do run run
:2.1.3: 2010-09-17

The third release in our 2.1 series addresses several user-inconvenience bugs
(and includes the fixes done in 2.0.6).  None are critical, but upgrading is
recommended for all users on earlier 2.1 releases.

Bug Fixes
*********

* Additional merges after an unrelated branch has been merged with its
  history no longer crash when deleted files are involved.
  (Vincent Ladeuil, John Arbash Meinel, #375898)

* ``bzr add SYMLINK/FILE`` now works properly when the symlink points to a
  previously-unversioned directory within the tree: the directory is
  marked versioned too.  
  (Martin Pool, #192859)

* ``bzr commit SYMLINK`` now works, rather than trying to commit the
  target of the symlink.
  (Martin Pool, John Arbash Meinel, #128562)

* ``bzr upgrade`` now creates the ``backup.bzr`` directory with the same
  permissions as ``.bzr`` directory on a POSIX OS.
  (Parth Malwankar, #262450)

* Configuration files in ``${BZR_HOME}`` are now written in an atomic
  way which should help avoid problems with concurrent writers.
  (Vincent Ladeuil, #525571)

* Don't traceback trying to unversion children files of an already
  unversioned directory.  (Vincent Ladeuil, #494221)

* Don't traceback when a lockdir's ``held/info`` file is corrupt (e.g.
  contains only NUL bytes).  Instead warn the user, and allow ``bzr
  break-lock`` to remove it.  (Andrew Bennetts, #619872)
  